# ComfyUI-Trellis2-GGUF

./: .gitignore  README.md  install.py  model_manager.py  nodes.py  prestartup_script.py  pyproject.toml  requirements.txt  spectrum_trellis2_patch.py  test_30m.py  test_rasterizer_oom.py
example_workflows/: Advanced.json  Better_Texture.json  High_Quality.json  LowPoly.json  Max_Quality.json  MeshRefiner.json  MultiViews.json  MultiViews_MeshOnly.json  MultiViews_TextureMesh.json  Only_Mesh_Advanced.json  Only_Mesh_Simple.json  Simple.json  TextureMesh.json  Using_Qwen_Rembg.json
patch/: flexible_dual_grid.py  remeshing.py
trellis2/models/: __init__.py
trellis2/models/sc_vaes/: sparse_unet_vae.py
trellis2/modules/sparse/: basic.py
trellis2/modules/sparse/spatial/: spatial2channel.py
trellis2/pipelines/: trellis2_image_to_3d.py
trellis2/utils/: gguf_utils.py
trellis2_gguf/models/: __init__.py
trellis2_gguf/models/sc_vaes/: fdg_vae.py  sparse_unet_vae.py
trellis2_gguf/modules/: image_feature_extractor.py
trellis2_gguf/modules/attention/: config.py
trellis2_gguf/modules/sparse/: config.py  linear.py
trellis2_gguf/modules/sparse/attention/: modules.py
trellis2_gguf/modules/sparse/conv/: conv_flex_gemm.py
trellis2_gguf/modules/sparse/spatial/: basic.py
trellis2_gguf/pipelines/: __init__.py  base.py  trellis2_gguf_image_to_3d.py  trellis2_gguf_texturing.py  trellis2_image_to_3d.py  trellis2_texturing.py
trellis2_gguf/pipelines/samplers/: flow_euler.py
trellis2_gguf/representations/mesh/: base.py
trellis2_gguf/trainers/flow_matching/mixins/: image_conditioned.py
trellis2_gguf/utils/: gguf_utils.py  sdnq_fast_loader.py  sdnq_utils.py  unwrap_utils.py
