[project]
name = "trellis2_gguf"
description = "ComfyUI Wrapper for Microsoft Trellis.2 - Native and Compact Structured Latents for 3D Generation"
version = "0.0.1"
license = {file = "LICENSE"} 

dependencies = ["meshlib", "requests", "pymeshlab", "opencv-python", "scipy", "open3d", "plotly", "trimesh", "rembg"]

[project.urls]
Repository = "https://github.com/Aero-Ex/ComfyUI-Trellis2-GGUF"
#  Used by Comfy Registry https://registry.comfy.org
"Bug Tracker" = "https://github.com/Aero-Ex/ComfyUI-Trellis2-GGUF"

[tool.comfy]
PublisherId = "aerox"
DisplayName = "ComfyUI-Trellis2-GGUF"
Icon = ""
includes = [] 